--- a/rush00/Assembly-CSharp.csproj
+++ b/rush00/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\BulletScript.cs" />
      <Compile Include="Assets\Scripts\cameraFollow.cs" />
      <Compile Include="Assets\Scripts\destroyOnCollide.cs" />
+     <Compile Include="Assets\Scripts\explosion.cs" />
      <Compile Include="Assets\Scripts\GroundWeapon.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\playerMovement.cs" />
